Fix: overflow on conversations

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -6418,6 +6418,7 @@ noscript {
     flex: 1 1 auto;
     padding: 10px 5px;
     padding-right: 15px;
+    word-break: break-all;
 
     &__info {
       overflow: hidden;
